--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,31 @@
-h1, p {
-  font-family: Lato;
+.calc {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-auto-rows: minmax(60px, auto);
+  background-color: pink;
+}
+#clearbutton {
+  grid-column: 1/3;
+}
+#equalbutton {
+  grid-column: 3/5;
+}
+input {
+  width: 97.4%;
+  margin: 0px;
+  margin-top: 10px;
+  padding: 12px 1.5px;
+  background-color: whitesmoke;
+  height: fit-content;
+  text-align: right;
+  font-size: 30px;
+}
+button {
+  background-color: rgb(102, 59, 66);
+  border-radius: 20px;
+  margin-top: 10px;
+  margin-left: 10px;
+  margin-right: 5px;
+  color: rgb(13, 243, 117);
+  font-weight: 900;
 }
